[package]
authors = ["Brian Carrigan <brian.c.carrigan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32_loopback"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
nb = "0.1.2"
rustbee = { path = "../../../rustbee" }

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[[bin]]
name = "stm32_loopback"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
